# cachex

./: CHANGELOG.md  README.md  pyproject.toml
cachex/: __init__.py  __version__.py  _core.py  _hashing.py  _util.py  exceptions.py  factories.py  ref.py  value.py
cachex/storage/: __init__.py  base.py  file.py  memcached.py  memory.py  mongo.py  redis.py
docs/: data_caching.md  object_caching.md  storage_factories.md  type_encoders.md
examples/: data_caching_1.py  data_caching_2.py  data_caching_3.py  data_caching_4.py  fastapi_demo.py  object_caching.py  storage_factories_1.py  storage_factories_2.py  type_encoders_1.py  type_encoders_2.py
tests/: test_ref.py  test_value.py
tests/test_storage/: test_file.py  test_memcached.py  test_mongo.py  test_redis.py
